# mail_to_sheet_automation

./: LICENSE  Makefile  README.md  clients.py  local.env  main.py  pyproject.toml  settings.py
