[tool.poetry]
name = "mail-to-sheet-automation"
version = "0.1.0"
description = ""
authors = ["Deivid Marreiro <davidteixeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
prettyconf = "^2.2.1"
imapclient = "^3.0.1"
pandas = "^2.2.3"
gspread = "^6.1.4"
oauth2client = "^4.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"
